# rv_estimator

./: .gitignore  pyproject.toml  requirements.txt  universe.yml
candidate_models/: __init__.py  _base_v2.py  _tune_lstm.py  _tune_xgb.py  ensemble_top.py  ensemble_top_v2.py  har_act.py  har_cj.py  har_csr.py  har_garch.py  har_globalfactor.py  har_ivts.py  har_max.py  har_qr.py  har_range.py  har_rs.py  har_rs_iv_q.py  har_shrink.py  har_shrink2group.py  har_sj.py  harq.py  harx_hs.py  lhar.py  lstm_rv.py  ms_har.py  panel_har.py  pdv_glek.py  realized_garch.py  star_har.py  threshold_har.py  vrp_spread.py  xgb_har.py
candidate_models/cards/: EWMA.hard_cases.md  EWMA.md  EWMA.report.md  EnsembleTopK-v2.hard_cases.md  EnsembleTopK-v2.md  EnsembleTopK.hard_cases.md  EnsembleTopK.md  EnsembleTopK.report.md  GuyonLekeufackPDV.hard_cases.md  GuyonLekeufackPDV.md  HAR-Act.md  (+68 more)
execution_plan/: ITER2_MODEL_CATALOG.md  ITER2_ORCHESTRATOR_PROMPT.md  ITER2_SWARM_KICKOFF.md  ORCHESTRATOR_PROMPT.md  SWARM_KICKOFF.md  iter2_swarm_progress.md  swarm_progress.md
rv_eval/: MODEL_PLAN.md  README.md  config.py  evaluator.py  features.py  model_contract.py  report.py  selfstats.py  walkforward.py
stage2_trade_eval/: README.md  STAGE2_STRATEGY_REFINEMENT_PLAN.md  __init__.py  chains.py  config.py  contracts.py  contributing.py  engine.py  hedge.py  management.py  marks.py  run.py  sizing.py  structures.py
trade_eval/: README.md  STAGE1_TRADING_EVAL_PLAN.md  __init__.py  ablations.py  backtest.py  benchmark.py  config.py  management.py  pit.py  portfolio.py  run.py  signals.py
(+358 files in other folders)
